@@ -206,3 +206,7 @@ function regparm(n:long) %{
 	} else
 		CONTEXT->regparm = _STP_REGPARM | (int) THIS->n;
 %}
+
+function syscall_nr:long() {
+	return register("orig_ax")
+}
