@@ -11,6 +11,10 @@
 
 2008-06-09  David Smith  <dsmith@redhat.com>
 
+	* tapsets.cxx
+	(utrace_var_expanding_copy_visitor::visit_target_symbol): Calls
+	'syscall_nr' to get the value of '$syscall'.
+
 	* tapsets.cxx (utrace_derived_probe::join_group): Removed
 	generated inclusion of tracehook.h.
 	(utrace_var_expanding_copy_visitor::visit_target_symbol): Uses
